# flappy-frog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  lockfile.json
.conan/profiles/: ios  ios_simulator  ios_simulator_release  release
.github/workflows/: _build.yml  _build_ios.yml  _build_linux.yml  _build_macos.yml  _parse_version.yml  ci.yml  conan_package.yml  create_tag_release.yml  published_release.yml  update_lockfile.yml
docs/: building.md
src/: CMakeLists.txt  EndScreen.cpp  EndScreen.hpp  Frog.cpp  Frog.hpp  Game.cpp  Game.hpp  GameScreen.cpp  GameScreen.hpp  Layer.cpp  Layer.hpp  ObstacleManager.cpp  ObstacleManager.hpp  Pipe.cpp  Pipe.hpp  Platform.hpp  ScreenManager.cpp  ScreenManager.hpp  StartScreen.cpp  StartScreen.hpp  Text.cpp  Text.hpp  World.cpp  World.hpp  main.cpp
tests/: CMakeLists.txt
